<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="fill_parent" android:layout_height="match_parent"
android:orientation="vertical">

	<LinearLayout android:id="@+id/linearLayout1"
	android:layout_width="fill_parent" android:layout_height="wrap_content"
	android:background="@color/toucan_green"
	android:padding="15dp">

		<TextView android:layout_width="200dp" android:layout_height="match_parent"
		android:text="@string/preferences" android:textSize="18dp"
		android:textAllCaps="true" android:textColor="@color/white"
		/>

		<View android:layout_width="0dp" android:layout_height="0dp"
		android:layout_weight="1" />

		<Button android:id="@+id/dialogButtonOK"
		android:layout_width="30dp" android:layout_height="30dp"
		android:background="@drawable/btn_ok" />

	</LinearLayout>

	<com.nirhart.parallaxscroll.views.ParallaxScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent" android:layout_height="match_parent"
	app:inner_parallax_factor="2" app:parallax_factor="5"
	app:parallax_views_num="5">

		<LinearLayout android:layout_width="match_parent"
		android:layout_height="wrap_content" android:orientation="vertical"
		android:background="@color/white" android:padding="15dp">

			<LinearLayout android:id="@+id/looking_for"
			android:layout_width="fill_parent" android:orientation="vertical"
			android:layout_height="wrap_content" tools:ignore="HardcodedText">

				<TextView android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/rad_lookingfor"
				android:textSize="18dp" android:gravity="center"
				android:layout_marginBottom="1dp" android:background="@color/flat_white"
				android:textAllCaps="true" android:textColor="@color/EDWARD"
				android:padding="1dp" />

				<RadioGroup android:id="@+id/rad_lookingfor"
				android:padding="10dp" android:background="@color/flat_white"
				android:layout_width="fill_parent" android:layout_height="wrap_content">

					<RadioButton android:id="@+id/rad_lookingfor_friends"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/rad_lookingfor_friends"
					android:textColor="@color/old_black"
					android:textAllCaps="true" android:button="@drawable/flat_btn_radio"
					android:checked="true" />

					<RadioButton android:id="@+id/rad_lookingfor_date"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAllCaps="true" android:textColor="@color/old_black"
					android:button="@drawable/flat_btn_radio"
					android:text="@string/rad_lookingfor_date"
					/>

					<RadioButton android:id="@+id/rad_lookingfor_serious_relationship"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAllCaps="true" android:textColor="@color/old_black"
					android:button="@drawable/flat_btn_radio"
					android:text="@string/rad_lookingfor_serious_relationship"
					/>

					<RadioButton android:id="@+id/rad_lookingfor_networking"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAllCaps="true" android:textColor="@color/old_black"
					android:button="@drawable/flat_btn_radio"
					android:text="@string/rad_lookingfor_networking"
					/>
				</RadioGroup>

			</LinearLayout>

			<TextView android:layout_width="match_parent"
			android:layout_height="15dp" android:background="@android:color/white"
			/>

			<LinearLayout android:id="@+id/sexual_orientation"
			android:layout_width="fill_parent" android:orientation="vertical"
			android:layout_height="wrap_content" tools:ignore="HardcodedText">

				<TextView android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/sexual_orientation"
				android:textSize="18dp" android:gravity="center"
				android:layout_marginBottom="1dp" android:background="@color/flat_white"
				android:textAllCaps="true" android:textColor="@color/EDWARD"
				android:padding="1dp" />

				<RadioGroup android:id="@+id/rad_sexual_orientation"
				android:padding="10dp" android:background="@color/flat_white"
				android:layout_width="fill_parent" android:layout_height="wrap_content">

					<RadioButton android:id="@+id/rad_sexual_orientation_unspecified"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/rad_sexual_orientation_unspecified"
					android:textColor="@color/old_black"
					android:textAllCaps="true" android:button="@drawable/flat_btn_radio"
					android:checked="true" />

					<RadioButton android:id="@+id/rad_sexual_orientation_straight"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/rad_sexual_orientation_straight"
					android:textColor="@color/old_black"
					android:textAllCaps="true" android:button="@drawable/flat_btn_radio"
					android:checked="true" />

					<RadioButton android:id="@+id/rad_sexual_orientation_gay_lesbian"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAllCaps="true" android:textColor="@color/old_black"
					android:button="@drawable/flat_btn_radio"
					android:text="@string/rad_sexual_orientation_gay_lesbian"
					/>

					<RadioButton android:id="@+id/rad_sexual_orientation_bisexual"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAllCaps="true" android:textColor="@color/old_black"
					android:button="@drawable/flat_btn_radio"
					android:text="@string/rad_sexual_orientation_bisexual"
					/>

					<RadioButton android:id="@+id/rad_sexual_orientation_transgendered"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAllCaps="true" android:textColor="@color/old_black"
					android:button="@drawable/flat_btn_radio"
					android:text="@string/rad_sexual_orientation_transgendered"
					/>
				</RadioGroup>

			</LinearLayout>

			<TextView android:layout_width="match_parent"
			android:layout_height="15dp" android:background="@android:color/white"
			/>
			
			<LinearLayout android:id="@+id/selLookingFor"
			android:layout_width="fill_parent" android:orientation="vertical"
			android:layout_height="wrap_content" tools:ignore="HardcodedText">

				<TextView android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/looking_for" android:textSize="18dp"
				android:gravity="center" android:layout_marginBottom="1dp"
				android:background="@color/flat_white"
				android:textAllCaps="true" android:textColor="@color/EDWARD"
				android:padding="1dp" />

				<LinearLayout android:padding="10dp" android:background="@color/flat_white"
				android:layout_width="fill_parent" android:layout_weight="1"
				android:orientation="vertical" android:layout_height="wrap_content">

					<RadioGroup android:id="@+id/rad_looking_for"
				android:padding="10dp" android:background="@color/flat_white"
				android:layout_width="fill_parent" android:layout_height="wrap_content">

					<RadioButton android:id="@+id/rad_looking_for_men"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/rad_looking_for_men"
					android:textColor="@color/old_black"
					android:textAllCaps="true" android:button="@drawable/flat_btn_radio"
					android:checked="true" />

					<RadioButton android:id="@+id/rad_looking_for_women"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAllCaps="true" android:textColor="@color/old_black"
					android:button="@drawable/flat_btn_radio"
					android:text="@string/rad_looking_for_women"
					/>

					<RadioButton android:id="@+id/rad_looking_for_both"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAllCaps="true" android:textColor="@color/old_black"
					android:button="@drawable/flat_btn_radio"
					android:text="@string/rad_looking_for_both"
					/>
				</RadioGroup>
				</LinearLayout>
			</LinearLayout>
			<TextView android:layout_width="match_parent"
			android:layout_height="15dp" android:background="@android:color/white"
			/>

			<LinearLayout android:id="@+id/selOrien"
			android:layout_width="fill_parent" android:orientation="vertical"
			android:layout_height="wrap_content" tools:ignore="HardcodedText">

				<TextView android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/orien_show" android:textSize="18dp"
				android:gravity="center" android:layout_marginBottom="1dp"
				android:background="@color/flat_white"
				android:textAllCaps="true" android:textColor="@color/EDWARD"
				android:padding="1dp" />

				<LinearLayout android:padding="10dp" android:background="@color/flat_white"
				android:layout_width="fill_parent" android:layout_weight="1"
				android:orientation="vertical" android:layout_height="wrap_content">

					<CheckBox android:id="@+id/cbx_orien_straight"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/cbx_orien_straight"
					android:textSize="18dp" android:checked="false"
					android:textAllCaps="true" android:textColor="@color/old_black"
					/>
					<CheckBox android:id="@+id/cbx_orien_gay"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/cbx_orien_gay"
					android:textSize="18dp" android:checked="false"
					android:textAllCaps="true" android:textColor="@color/old_black"
					/>

					<CheckBox android:id="@+id/cbx_orien_lesbian"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/cbx_orien_lesbian"
					android:textSize="18dp" android:checked="false"
					android:textAllCaps="true" android:textColor="@color/old_black"
					/>

					<CheckBox android:id="@+id/cbx_orien_bisexual"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/cbx_orien_bisexual"
					android:textSize="18dp" android:checked="false"
					android:textAllCaps="true" android:textColor="@color/old_black"
					/>

					<CheckBox android:id="@+id/cbx_orien_transgendered"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/cbx_orien_transgendered"
					android:textSize="18dp" android:checked="false"
					android:textAllCaps="true" android:textColor="@color/old_black"
					/>

					<CheckBox android:id="@+id/cbx_orien_unspecified"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/cbx_orien_unspecified"
					android:textSize="18dp" android:checked="false"
					android:textAllCaps="true" android:textColor="@color/old_black"
					/>
				</LinearLayout>
			</LinearLayout>

			<TextView android:layout_width="match_parent"
			android:layout_height="15dp" android:background="@android:color/white"
			/>

			<LinearLayout android:id="@+id/relationship"
			android:layout_width="fill_parent" android:orientation="vertical"
			android:layout_height="wrap_content" tools:ignore="HardcodedText">

				<TextView android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/relationship" android:textSize="18dp"
				android:gravity="center" android:layout_marginBottom="1dp"
				android:background="@color/flat_white"
				android:textAllCaps="true" android:textColor="@color/EDWARD"
				android:padding="1dp" />

				<RadioGroup android:id="@+id/rad_relationship"
				android:padding="10dp" android:background="@color/flat_white"
				android:layout_width="fill_parent" android:layout_height="wrap_content">

					<RadioButton android:id="@+id/rad_relationship_unspecified"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/rad_relationship_unspecified"
					android:textColor="@color/old_black"
					android:textAllCaps="true" android:button="@drawable/flat_btn_radio"
					android:checked="true" />
					
					<RadioButton android:id="@+id/rad_relationship_single"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/rad_relationship_single"
					android:textColor="@color/old_black"
					android:textAllCaps="true" android:button="@drawable/flat_btn_radio"
					android:checked="true" />

					<RadioButton android:id="@+id/rad_relationship_in_a_rel"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAllCaps="true" android:textColor="@color/old_black"
					android:button="@drawable/flat_btn_radio"
					android:text="@string/rad_relationship_in_a_rel"
					/>

					<RadioButton android:id="@+id/rad_relationship_married"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAllCaps="true" android:textColor="@color/old_black"
					android:button="@drawable/flat_btn_radio"
					android:text="@string/rad_relationship_married"
					/>

					<RadioButton android:id="@+id/rad_relationship_separated"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAllCaps="true" android:textColor="@color/old_black"
					android:button="@drawable/flat_btn_radio"
					android:text="@string/rad_relationship_separated"
					/>

					<RadioButton android:id="@+id/rad_relationship_widowed"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAllCaps="true" android:textColor="@color/old_black"
					android:button="@drawable/flat_btn_radio"
					android:text="@string/rad_relationship_widowed"
					/>

					<RadioButton android:id="@+id/rad_relationship_complicated"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAllCaps="true" android:textColor="@color/old_black"
					android:button="@drawable/flat_btn_radio"
					android:text="@string/rad_relationship_complicated"
					/>
				</RadioGroup>

			</LinearLayout>

		</LinearLayout>
		</com.nirhart.parallaxscroll.views.ParallaxScrollView>
</LinearLayout>