<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_register"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >
 
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.40"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

    <EditText
        android:id="@+id/username"
        android:hint="@string/hint_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="@color/white"
        android:inputType="textPersonName" 
        android:paddingTop="40dp"/>

    <EditText
        android:id="@+id/password"
        android:hint="@string/hint_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="@color/white"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/email"
        android:hint="@string/hint_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="@color/white"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/fullName"
        android:hint="@string/hint_fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="@color/white"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Register"
        android:textColor="@color/white" />
    
</LinearLayout>
</LinearLayout>
