<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="fill_parent" android:layout_height="match_parent"
android:orientation="vertical">

	<LinearLayout android:id="@+id/linearLayout1"
	android:layout_width="fill_parent" android:layout_height="wrap_content"
	android:background="@color/toucan_green"
	android:padding="15dp">

		<TextView android:layout_width="200dp" android:layout_height="match_parent"
		android:text="@string/settings" android:textSize="18dp"
		android:textAllCaps="true" android:textColor="@color/white"
		/>

		<View android:layout_width="0dp" android:layout_height="0dp"
		android:layout_weight="1" />

		<Button android:id="@+id/dialogButtonOK"
		android:layout_width="30dp" android:layout_height="30dp"
		android:background="@drawable/btn_ok" />

	</LinearLayout>

	<com.nirhart.parallaxscroll.views.ParallaxScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent" android:layout_height="match_parent"
	app:inner_parallax_factor="100" app:parallax_factor="100"
	app:parallax_views_num="0">

		<LinearLayout android:layout_width="match_parent"
		android:layout_height="wrap_content" android:orientation="vertical"
		android:background="@color/white" android:padding="10dp">

			<LinearLayout android:id="@+id/looking_for"
			android:layout_width="fill_parent" android:orientation="vertical"
			android:layout_height="wrap_content" tools:ignore="HardcodedText"
			android:background="@color/flat_white">

				<TextView android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="Change account password"
				android:textSize="18dp" android:gravity="left"
				android:textColor="@color/EDWARD" android:padding="10dp"
				/>

				<EditText android:id="@+id/edOldp" android:background="@color/white_smoke"
				android:hint="Old password" android:padding="10dp"
				android:singleLine="true" android:textColor="@color/old_black"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
				android:layout_marginBottom="5dp"   android:inputType="textPassword"/>

				<EditText android:id="@+id/edNewp" android:background="@color/white_smoke"
				android:hint="New password" android:padding="10dp"
				android:singleLine="true" android:textColor="@color/old_black"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
				android:layout_marginBottom="5dp"   android:inputType="textPassword"/>

				<EditText android:id="@+id/edVerip" android:background="@color/white_smoke"
				android:hint="Verify new password" android:padding="10dp"
				android:singleLine="true" android:textColor="@color/old_black"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
				android:layout_marginBottom="5dp"   android:inputType="textPassword"/>

				<Button android:id="@+id/btnSavePass"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:text="Change password" android:background="@color/toucan_green"
				android:textAllCaps="true" android:textColor="@color/flat_white"
				android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
				android:layout_marginBottom="10dp" />

			</LinearLayout>

			<TextView android:layout_width="match_parent"
			android:layout_height="15dp" android:background="@android:color/white"
			/>

			<LinearLayout android:id="@+id/sexual_orientation"
			android:layout_width="fill_parent" android:orientation="vertical"
			android:layout_height="wrap_content" tools:ignore="HardcodedText"
			android:background="@color/flat_white">

				<TextView android:text="@string/chat_privacy"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:textSize="18dp" android:gravity="left"
				android:textColor="@color/EDWARD" android:paddingTop="10dp"
				android:paddingLeft="10dp" android:paddingRight="10dp"
				/>

				<TextView android:text="@string/rad_chat"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:textSize="14dp" android:gravity="left"
				android:textColor="@color/EDWARD" android:paddingTop="1dp"
				android:paddingLeft="10dp" android:paddingRight="10dp"
				/>

				<RadioGroup android:id="@+id/rad_chat" android:padding="10dp"
				android:background="@color/flat_white"
				android:layout_width="fill_parent" android:layout_height="wrap_content">

					<RadioButton android:id="@+id/rad_chat_everyone"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/rad_chat_everyone"
					android:textColor="@color/old_black"
					android:textAllCaps="true" android:button="@drawable/flat_btn_radio"
					android:checked="true" />

					<RadioButton android:id="@+id/rad_chat_friends"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/rad_chat_friends"
					android:textColor="@color/old_black"
					android:textAllCaps="true" android:button="@drawable/flat_btn_radio"
					android:checked="true" />

					<RadioButton android:id="@+id/rad_chat_noone"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAllCaps="true" android:textColor="@color/old_black"
					android:button="@drawable/flat_btn_radio"
					android:text="@string/rad_chat_noone"
					/>

				</RadioGroup>

			</LinearLayout>

			<TextView android:layout_width="match_parent"
			android:layout_height="15dp" android:background="@android:color/white"
			/>

			<LinearLayout android:id="@+id/profile_appear"
			android:layout_width="fill_parent" android:orientation="vertical"
			android:layout_height="wrap_content" tools:ignore="HardcodedText"
			android:background="@color/flat_white">

				<TextView android:text="@string/profile_privacy"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:textSize="18dp" android:gravity="left"
				android:textColor="@color/EDWARD" android:paddingTop="10dp"
				android:paddingLeft="10dp" android:paddingRight="10dp"
				/>

				<TextView android:text="@string/profile_privacy_note"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:textSize="14dp" android:gravity="left"
				android:textColor="@color/EDWARD" android:paddingTop="1dp"
				android:paddingLeft="10dp" android:paddingRight="10dp"
				/>

				<RadioGroup android:id="@+id/rad_chat_commun"
				android:padding="10dp" android:background="@color/flat_white"
				android:layout_width="fill_parent" android:layout_height="wrap_content">

					<RadioButton android:id="@+id/rad_com_receive"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/rad_chat_allow"
					android:textColor="@color/old_black"
					android:textAllCaps="true" android:button="@drawable/flat_btn_radio"
					android:checked="true" />

					<RadioButton android:id="@+id/rad_com_dont_receive"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAllCaps="true" android:textColor="@color/old_black"
					android:button="@drawable/flat_btn_radio"
					android:text="@string/rad_chat_no" />

				</RadioGroup>

			</LinearLayout>

			<TextView android:layout_width="match_parent"
			android:layout_height="15dp" android:background="@android:color/white"
			/>
			<LinearLayout android:id="@+id/linearLayout6"
			android:layout_width="match_parent" android:layout_height="wrap_content"
			android:paddingBottom="5dp" tools:ignore="HardcodedText"
			android:orientation="horizontal">

				<Button android:id="@+id/btn_deac" android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="deactivate account" android:textAllCaps="true"
				android:background="@color/pubescent_white"
				android:textColor="@color/flat_white"
				/>
			</LinearLayout>

			<LinearLayout android:id="@+id/linearLayout7"
			android:layout_width="match_parent" android:layout_height="wrap_content"
			tools:ignore="HardcodedText" android:orientation="horizontal">

				<Button android:id="@+id/btn_cancel_acc"
				android:layout_width="fill_parent" android:background="@color/btn_logut_bg"
				android:layout_height="wrap_content"
				android:text="cancel my account" android:textAllCaps="true"
				android:textColor="@color/flat_white"
				/>
				<TextView android:layout_width="match_parent"
			android:layout_height="15dp" android:background="@android:color/white"
			/>
			</LinearLayout>
		</LinearLayout>
		
		</com.nirhart.parallaxscroll.views.ParallaxScrollView>
</LinearLayout>