<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="fill_parent" android:layout_height="match_parent"
android:orientation="vertical">

	<LinearLayout android:id="@+id/linearLayout1"
	android:layout_width="fill_parent" android:layout_height="wrap_content"
	android:background="@color/toucan_green"
	android:padding="15dp">

		<TextView android:layout_width="200dp" android:layout_height="match_parent"
		android:text="@string/strBroad" android:textSize="18dp"
		android:textAllCaps="true" android:textColor="@color/white"
		/>

		<View android:layout_width="0dp" android:layout_height="0dp"
		android:layout_weight="1" />

		<Button android:id="@+id/dialogButtonOK"
		android:layout_width="30dp" android:layout_height="30dp"
		android:background="@drawable/btn_ok" />

	</LinearLayout>

	<LinearLayout android:id="@+id/looking_for"
	android:layout_width="fill_parent" android:orientation="vertical"
	android:layout_height="wrap_content" tools:ignore="HardcodedText"
	android:background="@color/flat_white" android:windowSoftInputMode="stateAlwaysVisible">

		<TextView android:id="@+id/txtCharLeft" android:layout_width="wrap_content"
		android:layout_height="match_parent" android:text="150"
		android:textSize="16dp" android:textAllCaps="true"
		android:textColor="@color/old_black" android:gravity="right"
		android:paddingTop="5dp" android:orientation="horizontal"
		android:layout_gravity="right" android:paddingRight="10dp"
		/>
		
		<EditText android:id="@+id/txtBroadcast"
		android:hint="@string/edt_broadcast" android:background="@color/white_smoke"
		android:inputType="textMultiLine" android:gravity="top"
		android:lines="4" android:maxLength="150"
		android:singleLine="true" android:textColor="@color/old_black"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:layout_marginTop="2dp" android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp" android:padding="10dp"
		
		/>

		<LinearLayout android:id="@+id/buttons" android:layout_width="fill_parent"
		android:orientation="horizontal" android:layout_height="wrap_content"
		tools:ignore="HardcodedText" android:background="@color/flat_white"
		android:padding="10dp"   android:gravity="center_horizontal"  >

			<Button android:id="@+id/btnClose" android:layout_width="0dp" android:layout_weight="1"
			android:layout_height="wrap_content" android:layout_gravity="center"
			android:background="@color/PUMICE"
			android:text="@string/btnClose"
			android:textAllCaps="true" android:textColor="@color/white"
			android:textSize="20dp" />
			

			<Button android:id="@+id/btnStartLocChat"
			android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content"
			android:layout_gravity="center" android:layout_marginLeft="5dip"
			android:background="@color/toucan_green"
			android:text="@string/btn_start_loc_chat"
			android:textAllCaps="true" android:textColor="@color/white"
			android:textSize="20dp" />
		</LinearLayout>
	</LinearLayout>

</LinearLayout>